--- a/index.html
+++ b/index.html
@@ -17,27 +17,31 @@
     </header>
     <main class="main">
         <div class="container">
-            <h2 class="sub-title">Choose your weapon</h2>
-            <span class="description">First to score 5 points wins</span>
-            <div class="score-table">
-                <figure class="player">
-                    <img class="icon" src="./icons/question.svg" alt="player icon" />
-                    <figcaption>Player: <span>0</span></figcaption>
-                </figure>
-                <figure class="computer">
-                    <img class="icon" src="./icons/question.svg" alt="computer icon" />
-                    <figcaption>Computer: <span>0</span></figcaption>
-                </figure>
-            </div>
-            <div class="navigation">
-                <button class="button button--rock"></button>
-                <button class="button button--scissors"></button>
-                <button class="button button--paper"></button>
+            <div class="wrapper">
+                <h2 class="sub-title">Choose your weapon</h2>
+                <p class="description">First to score 5 points wins</p>
+                <div class="cards">
+                    <figure class="card card--player">
+                        <img class="icon" src="./icons/question.svg" alt="player icon" />
+                        <figcaption>Player: <span>0</span></figcaption>
+                    </figure>
+                    <figure class="card card--computer">
+                        <img class="icon" src="./icons/question.svg" alt="computer icon" />
+                        <figcaption>Computer: <span>0</span></figcaption>
+                    </figure>
+                </div>
+                <div class="navigation">
+                    <button class="button button--rock"></button>
+                    <button class="button button--scissors"></button>
+                    <button class="button button--paper"></button>
+                </div>
             </div>
         </div>
     </main>
     <footer class="footer">
-        <span>Copyright © 2024 <a href="https://github.com/pav-nk">pav_nk</a></span>
+        <div class="container">
+            <span>Copyright © 2024</span><a class="link link--github" href="https://github.com/pav-nk">pav_nk</a>
+        </div>
     </footer>
     <script src="./script.js"></script>
 </body>
